fix error on task API(retrieve and delete), add update API on task
